# SaintPetersburg

./: .gitignore  Makefile  README.md  beamercolorthemeSaintPetersburg.sty  beamerfontthemeSaintPetersburg.sty  beamerthemeSaintPetersburg.sty  beamerthemespbu.sty  ctanupload.conf  example.tex  guix.scm  meson.build  poster.tex  refs.bib  test
art/: spbu-CoA.eps  spbu-block-ru.eps
demo/slides/: Makefile  example.tex
demo/slides/data/: propagating-acf-00  propagating-acf-01  propagating-acf-02  propagating-acf-03  propagating-acf-04  propagating-acf-05  propagating-acf-06  propagating-acf-07  propagating-acf-08  propagating-acf-09  propagating-acf-10  propagating-acf-11  propagating-acf-12  propagating-acf-13  propagating-acf-14  propagating-acf-15  propagating-acf-16  propagating-acf-17  propagating-acf-18  propagating-acf-19  propagating-elevation  propagating-wave-height-x  propagating-wave-height-y  propagating-wave-length-x  propagating-wave-length-y  propagating-wave-period  propagating-white-noise  standing-acf-0  standing-acf-1  standing-acf-2  standing-acf-3  standing-acf-4  standing-acf-5  standing-acf-6  standing-acf-7  standing-acf-8  standing-acf-9  standing-elevation  standing-wave-height-x  standing-wave-height-y  (+4 more)
demo/slides/gnuplot/: acf.gnuplot  quantile.gnuplot
demo/slides/src/: main.tex
demos/: poster.tex  slides.tex
eps/: spbu-block-en.eps
scripts/: ctanify  latexmk-with-env
src/: SaintPetersburg.dtx  SaintPetersburg.ins  beamercolorthemeSaintPetersburg.dtx  beamerfontthemeSaintPetersburg.dtx  beamerthemeSaintPetersburg.dtx
